feat: Get Participant Screening Episode functions (#63)
* feat: created get participant screening episode functions for the management and data service

* feat: refactoring get participant screening episode functions and repositories

* feat: refactored create participant screening episode functions and added unit test for the data service function

* refactor: refactored unit tests for the data service function

* feat: added unit tests for the management service function and changed naming conventions

* fix: fixing url for the data service function

* feat: updated create table database script for participant screening episode table and rescaffolded

* feat: created containers for new functions in the compose files and changed some docker file paths to match the BIAnalyticsManagementService

* fix: renamed file paths in docker files to match renamed BIAnalyticsManagementService

* fix: formatting fix

* fix: code duplication issue fixed

* fix: typo fix

* refactor: created pagination helper class to encapsulate duplicated code in functions

* refactor: updated helper class to include more code from the functions and implemented helper in the functions

* refactor: made changes to helper class with function calling helper classes individually

* fix: updated docker compose file to refelct BIAnalyticsService name change

* fix: updated win compose file and removed async for helper class

* refactor: merged helper classes and refactored logic as per comments

* refactor: removed logging from helper class and implemented it in the functions and resolved comments

* refactor: changed helper class methods to static and resolved comments

* fix: formatting changes

* fix: failing unit test due to log change

* fix: made pagination helper class static

--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -107,13 +107,27 @@ services:
       - ASPNETCORE_URLS=http://*:6062
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
+  get-participant-screening-episode-data:
+    container_name: get-participant-screening-episode-data
+    network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./BIAnalyticsDataService/GetParticipantScreeningEpisodeData/Dockerfile
+    ports:
+      - "6002:6002"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6002
+      - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
   # BI Analytics Service
   create-participant-screening-episode:
     container_name: create-participant-screening-episode
     network_mode: host
     build:
       context: ./src/
-      dockerfile: ./BIAnalyticsService/CreateParticipantScreeningEpisode/Dockerfile
+      dockerfile: ./BIAnalyticsManagementService/CreateParticipantScreeningEpisode/Dockerfile
     ports:
       - "6008:6008"
     environment:
@@ -128,7 +142,7 @@ services:
     network_mode: host
     build:
       context: ./src/
-      dockerfile: ./BIAnalyticsService/CreateParticipantScreeningProfile/Dockerfile
+      dockerfile: ./BIAnalyticsManagementService/CreateParticipantScreeningProfile/Dockerfile
     ports:
       - "6009:6009"
     environment:
@@ -144,7 +158,7 @@ services:
     network_mode: host
     build:
       context: ./src/
-      dockerfile: ./BIAnalyticsService/GetParticipantScreeningProfile/Dockerfile
+      dockerfile: ./BIAnalyticsManagementService/GetParticipantScreeningProfile/Dockerfile
     ports:
       - "6063:6063"
     environment:
@@ -152,6 +166,20 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6063
       - GetProfilesUrl=http://127.0.0.1:6062/api/GetParticipantScreeningProfileData
+
+  get-participant-screening-episode:
+    container_name: get-participant-screening-episode
+    network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./BIAnalyticsManagementService/GetParticipantScreeningEpisode/Dockerfile
+    ports:
+      - "6003:6003"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6003
+      - GetParticipantScreeningEpisodeDataUrl=http://127.0.0.1:6002/api/GetParticipantScreeningEpisodeData
 
   # Demographics Service
   get-demographics-data:
