--- a/tests/BIAnalyticsDataServiceTests/GetParticipantScreeningEpisodeDataTests/GetParticipantScreeningEpisodeDataTests.csproj
+++ b/tests/BIAnalyticsDataServiceTests/GetParticipantScreeningEpisodeDataTests/GetParticipantScreeningEpisodeDataTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\BIAnalyticsService\GetParticipantScreeningProfile\GetParticipantScreeningProfile.csproj" />
+    <ProjectReference Include="..\..\..\src\BIAnalyticsDataService\GetParticipantScreeningEpisodeData\GetParticipantScreeningEpisodeData.csproj" />
     <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
