--- a/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-int-core.yaml
@@ -23,17 +23,17 @@ resources:
       endpoint: NHSDigital
 
 variables:
-  - group: NFT_core_backend
-  - group: NFT_audit_backend_remote_state
-  - group: NFT_hub_backend_remote_state
+  - group: INT_core_backend
+  - group: INT_audit_backend_remote_state
+  - group: INT_hub_backend_remote_state
   - name: TF_DIRECTORY
     value: $(System.DefaultWorkingDirectory)/$(System.TeamProject)/infrastructure/tf-core
   - name: TF_VERSION
     value: 1.9.2
   - name: TF_PLAN_ARTIFACT
-    value: tf_plan_core_NFT
+    value: tf_plan_core_INT
   - name: ENVIRONMENT
-    value: nft
+    value: int
 
 stages:
   - stage: terraform_plan
