--- a/.env.template
+++ b/.env.template
@@ -15,3 +15,7 @@ MESHSHAREDKEY="" #Shared Key for the MESH Mailbox, For local sandbox this is set
 MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against the MESH Mailbox, for the local sandbox this is defined when creating the private key and certificate, production and integration this will be issues when provisining the environment.
 MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL host.docker.internal for mac and localhost for windows
 BSSMAILBOX=X26ABC1 #Mesh mailbox name
+
+# EventGrid
+EVENTGRID_URL=""
+EVENTGRID_KEY=""
