--- a/tests/BIAnalyticsManagementServiceTests/CreateParticipantScreeningEpisodeTests/CreateParticipantScreeningEpisodeTests.csproj
+++ b/tests/BIAnalyticsManagementServiceTests/CreateParticipantScreeningEpisodeTests/CreateParticipantScreeningEpisodeTests.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.28.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.EventGrid" Version="3.4.2" />
   </ItemGroup>
 
   <ItemGroup>
