--- a/src/BIAnalyticsManagementService/CreateParticipantScreeningEpisode/local.settings.json.template
+++ b/src/BIAnalyticsManagementService/CreateParticipantScreeningEpisode/local.settings.json.template
@@ -1,6 +1,7 @@
 {
   "IsEncrypted": false,
   "Values": {
+    "ASPNETCORE_ENVIRONMENT": "Development",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "GetEpisodeUrl": "http://localhost:6060/api/GetEpisode",
