--- a/src/BIAnalyticsManagementService/CreateParticipantScreeningProfile/local.settings.json.template
+++ b/src/BIAnalyticsManagementService/CreateParticipantScreeningProfile/local.settings.json.template
@@ -1,6 +1,7 @@
 {
   "IsEncrypted": false,
   "Values": {
+    "ASPNETCORE_ENVIRONMENT": "Development",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "GetParticipantUrl": "http://localhost:6061/api/GetParticipant",
