--- a/src/BIAnalyticsManagementService/GetParticipantScreeningEpisode/local.settings.json.template
+++ b/src/BIAnalyticsManagementService/GetParticipantScreeningEpisode/local.settings.json.template
@@ -1,6 +1,7 @@
 {
   "IsEncrypted": false,
   "Values": {
+    "ASPNETCORE_ENVIRONMENT": "Development",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "GetParticipantScreeningEpisodeDataUrl":"http://localhost:6003/api/GetParticipantScreeningEpisodeData"
