--- a/src/EpisodeManagementService/CreateUpdateEpisode/CreateUpdateEpisode.csproj
+++ b/src/EpisodeManagementService/CreateUpdateEpisode/CreateUpdateEpisode.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.15.1" />
     <PackageReference Include="Azure.Messaging.EventGrid" Version="4.28.0" />
+    <PackageReference Include="Azure.Identity" Version="1.13.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
