--- a/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
+++ b/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
@@ -1,6 +1,7 @@
 {
     "IsEncrypted": false,
     "Values": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
         "MeshApiBaseUrl" : "http://localhost:8700/messageexchange",
