feat: updating docker files

--- a/.env.template
+++ b/.env.template
@@ -17,5 +17,5 @@ MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL host.dock
 BSSMAILBOX=X26ABC1 #Mesh mailbox name
 
 # EventGrid
-EVENTGRID_URL=""
+EVENTGRID_URL="https://sams-test-topic.uksouth-1.eventgrid.azure.net/api/events"
 EVENTGRID_KEY=""
