feat: rename blob storage container

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@
 
 # Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
 AZURITE_CONNECTION_STRING=""
-AZURITE_CONTAINER_NAME="sample-container" #Azure blob container name
+AZURITE_CONTAINER_NAME="inbound" #Azure blob container name
 
 # Database name and SA password
 DB_CONNECTION="" # sql-database for mac, 127.0.0.1 for windows
