--- a/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
+++ b/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
@@ -6,7 +6,7 @@
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
         "MeshApiBaseUrl" : "http://localhost:8700/messageexchange",
         "BSSMailBox": "X26ABC1",
-        "BSSContainerName": "sample-container",
+        "BSSContainerName": "inbound",
         "MeshPassword": "password",
         "MeshSharedKey": "TestKey",
         "MeshKeyPassphrase":"test123",
