--- a/compose.yaml
+++ b/compose.yaml
@@ -74,8 +74,8 @@ services:
       - DB_CONNECTION=${DB_CONNECTION}
 
   # BI Analytics Data Service
-  create-participant-screening-episode-data:
-    container_name: create-participant-screening-episode-data
+  create-ps-episode-data:
+    container_name: create-ps-episode-data
     restart: always
     build:
       context: ./src/
@@ -122,8 +122,8 @@ services:
       - ASPNETCORE_URLS=http://*:6062
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
-  get-participant-screening-episode-data:
-    container_name: get-participant-screening-episode-data
+  get-ps-episode-data:
+    container_name: get-ps-episode-data
     restart: always
     build:
       context: ./src/
@@ -139,8 +139,8 @@ services:
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
   # BI Analytics Management Service
-  create-participant-screening-episode:
-    container_name: create-participant-screening-episode
+  create-ps-episode:
+    container_name: create-ps-episode
     restart: always
     build:
       context: ./src/
@@ -154,7 +154,7 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6008
       - GetEpisodeUrl=http://get-episode-mgmt:6060/api/GetEpisode
-      - CreateParticipantScreeningEpisodeUrl=http://create-participant-screening-episode-data:6010/api/CreateParticipantScreeningEpisode
+      - CreateParticipantScreeningEpisodeUrl=http://create-ps-episode-data:6010/api/CreateParticipantScreeningEpisode
 
   create-participant-screening-profile:
     container_name: create-participant-screening-profile
@@ -190,8 +190,8 @@ services:
       - ASPNETCORE_URLS=http://*:6063
       - GetProfilesUrl=http://get-participant-screening-profile-data:6062/api/GetParticipantScreeningProfileData
 
-  get-participant-screening-episode:
-    container_name: get-participant-screening-episode
+  get-ps-episode:
+    container_name: get-ps-episode
     restart: always
     build:
       context: ./src/
@@ -204,7 +204,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6003
-      - GetParticipantScreeningEpisodeDataUrl=http://get-participant-screening-episode-data:6002/api/GetParticipantScreeningEpisodeData
+      - GetParticipantScreeningEpisodeDataUrl=http://get-ps-episode-data:6002/api/GetParticipantScreeningEpisodeData
 
   # Demographics Service
   get-demographics-data:
