--- a/compose.yaml
+++ b/compose.yaml
@@ -90,8 +90,8 @@ services:
       - ASPNETCORE_URLS=http://*:6010
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
-  create-participant-screening-profile-data:
-    container_name: create-participant-screening-profile-data
+  create-ps-profile-data:
+    container_name: create-ps-profile-data
     restart: always
     build:
       context: ./src/
@@ -156,8 +156,8 @@ services:
       - GetEpisodeUrl=http://get-episode-mgmt:6060/api/GetEpisode
       - CreateParticipantScreeningEpisodeUrl=http://create-ps-episode-data:6010/api/CreateParticipantScreeningEpisode
 
-  create-participant-screening-profile:
-    container_name: create-participant-screening-profile
+  create-ps-profile:
+    container_name: create-ps-profile
     restart: always
     build:
       context: ./src/
@@ -171,7 +171,7 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6009
       - GetParticipantUrl=http://get-participant:6061/api/GetParticipant
-      - CreateParticipantScreeningProfileUrl=http://create-participant-screening-profile-data:6011/api/CreateParticipantScreeningProfile
+      - CreateParticipantScreeningProfileUrl=http://create-ps-profile-data:6011/api/CreateParticipantScreeningProfile
       - DemographicsServiceUrl=http://get-demographics-data:6080/api/GetDemographicsData
 
   get-participant-screening-profile:
