--- a/src/EpisodeDataService/CreateEpisode/CreateEpisode.csproj
+++ b/src/EpisodeDataService/CreateEpisode/CreateEpisode.csproj
@@ -29,5 +29,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Data\Data.csproj" />
+    <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
   </ItemGroup>
 </Project>
