--- a/src/Shared/Common/Common.csproj
+++ b/src/Shared/Common/Common.csproj
@@ -3,6 +3,8 @@
   <ItemGroup>
     <ProjectReference Include="..\dotnet-mesh-client\application\DotNetMeshClient\NHS.Mesh.Client\NHS.Mesh.Client.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
+    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.28.0" />
+    <PackageReference Include="Azure.Identity" Version="1.13.1" />
   </ItemGroup>
 
   <ItemGroup>
