feat: making CreateParticipantScreeningEpisode eventGrid triggered (#80)
* feat: making CreateParticipantScreeningEpisode eventGrid triggered

* feat: making code more testable with depenency injection

* feat: now checks for environment and changes credentials to connect to event grid

* feat: removing uneccassary library

* feat: now sends full event object rather than the episodeId

* feat: updating docker files

* feat: fixing unit tests

* feat: updating unit tests

* feat: adding extension for adding eventgrid client

* fix: removing semicolon

* fix: removing useless assignment

* fix: removed return

--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -207,6 +207,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://*:6007
       - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+      - topicEndpoint=${EVENTGRID_URL}
+      - topicKey=${EVENTGRID_KEY}
 
   get-episode:
     container_name: get-episode
@@ -235,6 +237,8 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7777
       - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+      - topicEndpoint=${EVENTGRID_URL}
+      - topicKey=${EVENTGRID_KEY}
 
   # Episode Integration Service
   receive-data:
