--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -154,6 +154,7 @@ services:
       - GetParticipantUrl=http://127.0.0.1:6061/api/GetParticipant
       - CreateParticipantScreeningProfileUrl=http://127.0.0.1:6011/api/CreateParticipantScreeningProfile
       - DemographicsServiceUrl=http://127.0.0.1:6080/api/GetDemographicsData
+      - GetScreeningDataUrl=http://127.0.0.1:6082/api/GetScreeningData
 
   get-participant-screening-profile:
     container_name: get-participant-screening-profile
