--- a/.azuredevops/pipelines/cd-infrastructure-dev-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-dev-core.yaml
@@ -14,7 +14,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: feat/DTOSS-6235-Create-Terraform-Module-for-Azure-Event-Grid
+      ref: main
       endpoint: NHSDigital
 
 variables:
