--- a/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
@@ -19,7 +19,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: fix/DTOSS-6322-Container-level-logs-are-unavailable-in-NFT-2
+      ref: main
       endpoint: NHSDigital
 
 variables:
