feat: Include global reference data in data assets (#87)
* feat: created screening lkp table

* feat: created screening lkp model and interfaces and rescaffolded

* feat: created get screening data function

* feat: implemented calls to reference data service in create participant screening episode

* feat: updated compose files to include new function calls and new get screenign data function

* feat: implemented screeninglkp functionality in create participant screening profile to retrieve screening name

* feat: created unit tests for get screening data

* feat: updated compose files

* fix: format fixes

* fix: format fix

* fix: format fix

* feat: crated insert statement for screening lkp table and updated local settings for get screening data

* fix: removed null check in create ps profile and updated test data for screening lkp

* fix: removed null check in create ps episode

* fix: updated insert test data file name to insert reference data

* fix: removed the null check in get screening data async method in create ps episode

--- a/src/BIAnalyticsManagementService/CreateParticipantScreeningProfile/local.settings.json.template
+++ b/src/BIAnalyticsManagementService/CreateParticipantScreeningProfile/local.settings.json.template
@@ -6,7 +6,8 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "GetParticipantUrl": "http://localhost:6061/api/GetParticipant",
     "CreateParticipantScreeningProfileUrl":"http://localhost:6011/api/CreateParticipantScreeningProfile",
-    "DemographicsServiceUrl": "http://localhost:6080/api/GetDemographicsData"
+    "DemographicsServiceUrl": "http://localhost:6080/api/GetDemographicsData",
+    "GetScreeningDataUrl": "http://localhost:6082/api/GetScreeningData"
   },
   "Host": {
     "LocalHttpPort": 6009
