--- a/compose.yaml
+++ b/compose.yaml
@@ -155,6 +155,8 @@ services:
       - ASPNETCORE_URLS=http://*:6008
       - GetEpisodeUrl=http://get-episode-mgmt:6060/api/GetEpisode
       - CreateParticipantScreeningEpisodeUrl=http://create-ps-episode-data:6010/api/CreateParticipantScreeningEpisode
+      - GetScreeningDataUrl=http://get-screening-data:6082/api/GetScreeningData
+      - GetReferenceDataUrl=http://get-organisation-data:6081/api/GetReferenceData
 
   create-ps-profile:
     container_name: create-ps-profile
@@ -173,6 +175,7 @@ services:
       - GetParticipantUrl=http://get-participant:6061/api/GetParticipant
       - CreateParticipantScreeningProfileUrl=http://create-ps-profile-data:6011/api/CreateParticipantScreeningProfile
       - DemographicsServiceUrl=http://get-demographics-data:6080/api/GetDemographicsData
+      - GetScreeningDataUrl=http://get-screening-data:6082/api/GetScreeningData
 
   get-ps-profile:
     container_name: get-ps-profile
@@ -401,4 +404,20 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6081
+      - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
+  get-screening-data:
+    container_name: get-screening-data
+    restart: always
+    build:
+      context: ./src/
+      dockerfile: ./ReferenceDataService/GetScreeningData/Dockerfile
+    networks:
+      - app-network
+    ports:
+      - "6082:6082"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6082
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
