--- a/src/BIAnalyticsManagementService/CreateParticipantScreeningProfile/CreateParticipantScreeningProfile.csproj
+++ b/src/BIAnalyticsManagementService/CreateParticipantScreeningProfile/CreateParticipantScreeningProfile.csproj
@@ -10,8 +10,9 @@
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.19.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.15.1" />
+    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.28.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.EventGrid" Version="3.4.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
