bugfix: update RetrieveMesh function with Mesh auth handshake and KeyVault. (#97)
* feat: add keyvault, ssl handshake

* feat: add associated files

* fix: add missing dependencies for build

* feat: update mesh filename prop

* tests: update unit tests

* feat: Updated Common with latest BlobStorageHelper & MeshToBlobTransferHandler from CM

* refactor: Resolved sonarcloud issues

* test: Fixed tests

* fix: No longer renames files

---------

Co-authored-by: alex-clayton-1 <alexander.clayton1@nhs.net>

--- a/src/MeshIntegrationService/RetrieveMeshFile/RetrieveMeshFile.csproj
+++ b/src/MeshIntegrationService/RetrieveMeshFile/RetrieveMeshFile.csproj
@@ -8,16 +8,19 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.19.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.20.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="1.2.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.15.1" />
+    <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="mycert.pfx">
+    <None Update="meshpfx.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="local.settings.json">
