--- a/.azuredevops/pipelines/cd-infrastructure-int-audit.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-int-audit.yaml
@@ -19,12 +19,12 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: 50b7be9a048ad75097a409251687d9b527780079
+      ref: main
       endpoint: NHSDigital
 
 variables:
   - group: INT_audit_backend
-  - group: INT_hub_backend_remote_state
+  - group: DEV_hub_backend_remote_state
   - name: TF_DIRECTORY
     value: $(System.DefaultWorkingDirectory)/$(System.TeamProject)/infrastructure/tf-audit
   - name: TF_VERSION
