feat: Update Docker Compose configuration to include GetEpisodeReferenceData and RetrieveEpisodeReferenceData functions

--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -226,6 +226,20 @@ services:
       - ASPNETCORE_URLS=http://*:6070
       - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
+  retrieve-episode-ref-data:
+    container_name: retrieve-episode-ref-data
+    network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeDataService/RetrieveEpisodeReferenceData/Dockerfile
+    ports:
+      - "7575:7575"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:7575
+      - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
   update-episode:
     container_name: update-episode
     network_mode: host
@@ -291,6 +305,20 @@ services:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6060
       - GetEpisodeUrl=http://127.0.0.1:6070/api/GetEpisode
+
+  get-episode-ref-data:
+    container_name: get-episode-ref-data
+    network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeManagementService/GetEpisodeReferenceData/Dockerfile
+    ports:
+      - "7574:7574"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:7574
+      - RetrieveEpisodeReferenceDataServiceUrl= "http://localhost:7575/api/RetrieveEpisodeReferenceData"
 
       # Mesh Mailbox Management Service
   retrieve-mesh-file:
