--- a/scripts/mesh-mailbox-testing/env.template
+++ b/scripts/mesh-mailbox-testing/env.template
@@ -1,13 +1,11 @@
 # Environment variables for authenticate-and-send-mesh-file.py
 
 # Mailbox sending the email
-MAILBOX_ID_FROM=X26OT299 # Send from INT mailbox
+MAILBOX_ID_FROM=""
 MAILBOX_FROM_PASSWORD=""
 
-# Mailbox receiving the email (comment out all but one)
-MAILBOX_ID_TO=X26OT023 # Send to DEV mailbox
-# MAILBOX_ID_TO=X26OT298 # Send to NFT mailbox
-# MAILBOX_ID_TO=X26OT299 # Send to INT mailbox
+# Mailbox receiving the email
+MAILBOX_ID_TO="X26OT023"
 
 # Mesh API shared key
 SHARED_KEY=""
