docs: update env template

--- a/scripts/mesh-mailbox-testing/env.template
+++ b/scripts/mesh-mailbox-testing/env.template
@@ -5,7 +5,7 @@ MAILBOX_ID_FROM=""
 MAILBOX_FROM_PASSWORD=""
 
 # Mailbox receiving the email
-MAILBOX_ID_TO="X26OT023"
+MAILBOX_ID_TO=""
 
 # Mesh API shared key
 SHARED_KEY=""
