docs: more .env settings

--- a/scripts/mesh-mailbox-testing/env.template
+++ b/scripts/mesh-mailbox-testing/env.template
@@ -9,6 +9,9 @@ MAILBOX_ID_TO=""
 
 # Mesh API shared key
 SHARED_KEY=""
+CERT_PATH=""
+KEY_PATH=""
+WORKFLOW_ID=""
 
 # The file to send
 FILE_PATH=bss_episodes_5255.csv
