feat: add view inbox after posting message

--- a/scripts/mesh-mailbox-testing/env.template
+++ b/scripts/mesh-mailbox-testing/env.template
@@ -6,6 +6,7 @@ MAILBOX_FROM_PASSWORD=""
 
 # Mailbox receiving the email
 MAILBOX_ID_TO=""
+MAILBOX_TO_PASSWORD=""
 
 # Mesh API shared key
 SHARED_KEY=""
