feat: combined script and updated test data

--- a/scripts/mesh-mailbox-testing/env.template
+++ b/scripts/mesh-mailbox-testing/env.template
@@ -15,4 +15,4 @@ KEY_PATH=""
 WORKFLOW_ID=""
 
 # The file to send
-FILE_PATH=bss_episodes_5255.csv
+FILE_PATH=../../TestData/bss_episodes_10_rows.csv
